# tempo

./: '  .codespellrc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .mergify.yml  AGENTS.md  Cargo.toml  Cross.toml  DIFFERENTIAL_REVIEW_PR_2632.md  Dockerfile  Dockerfile.bench  Dockerfile.chef  Dockerfile.reproducible  Justfile  LICENSE-MIT  PR-2696-review.md  README.md  SECURITY_REPORT.md  WAFFLES.md  ]  aa-spec.md  analyze_log.py  article_15814.html  async-exec-plan.md  audit_diff_summary.md  bench-e2e.nu  bench-schelk.nu  bench.nu  bench_and_kill.sh  block-propagation-investigation.md  clippy.toml  codecov.yml  codspeed-prebench.nu  commit_msg.txt  deny.toml  docker-bake-profiling.hcl  docker-bake.hcl  flake.nix  (+21 more)
app/: Cargo.toml
app/src/: main.rs
crates/alloy/: CHANGELOG.md  Cargo.toml  README.md
crates/alloy/examples/: README.md  access_key.rs  batch_payments.rs  burn_tokens.rs  configure_provider.rs  get_balance.rs  get_block_number.rs  mint_fee_liquidity.rs  mint_tokens.rs  sponsored_transaction.rs  tempo_address.rs  transfer.rs  transfer_with_memo.rs  watch_transfers.rs  watch_transfers_with_memo.rs
crates/alloy/src/: account.rs  address.rs  lib.rs  network.rs  transport.rs  wallet.rs
crates/alloy/tests/: relay_transport.rs
crates/bootnode/: Cargo.toml
crates/bootnode/src/: lib.rs  server.rs  state.rs
crates/bootnode/tests/: integration.rs
crates/bridge-exex/: Cargo.toml  example-config.toml
crates/bridge-exex/src/: config.rs  consensus_client.rs  deposit_id.rs  digest_parity_test.rs  exex.rs  health.rs  lib.rs  metrics.rs  origin_client.rs  origin_watcher.rs  persistence.rs  proof.rs  retry.rs  signer.rs  tempo_client.rs  tempo_watcher.rs  tests.rs
crates/chainspec/: CHANGELOG.md  Cargo.toml
crates/chainspec/src/: block.rs  bootnodes.rs  cli.rs  constants.rs  epoch.rs  features.rs  hardfork.rs  lib.rs  network_identity.rs  page_account.rs  spec.rs
crates/commonware-node/: CHANGELOG.md  Cargo.toml
crates/commonware-node-config/: Cargo.toml
crates/commonware-node-config/src/: encrypted.rs  encryption.rs  i_reveal_secrets.rs  lib.rs  lib.rs.tmp.7629.1764077425578  p2p.rs  tests.rs  timeouts.rs  validator.rs
crates/commonware-node-cryptography/: Cargo.toml
crates/commonware-node-cryptography/src/: lib.rs
crates/commonware-node/src/: alias.rs  args.rs  channel_metrics.rs  cli.rs  config.rs  epoch.rs  fast_path.rs  lib.rs  marshal_utils.rs  metrics.rs  network.rs  network_identity.rs  node.rs  notarization_tracker.rs  storage.rs  subblocks.rs  utils.rs  validators.rs
crates/commonware-node/testdata/: raw_block_19666674.hex
crates/consensus/: CHANGELOG.md  Cargo.toml  build.rs
crates/consensus-args/: Cargo.toml
crates/consensus-args/src/: lib.rs
crates/consensus-config/: Cargo.toml
crates/consensus-config/src/: lib.rs  tests.rs
crates/consensus-indexer/: Cargo.toml
crates/consensus-indexer/src/: db.rs  feed.rs  identity.rs  indexer.rs  lib.rs  state.rs  store.rs  tests.rs
crates/consensus/proto/: consensus.proto  liveness.proto  sync.proto
crates/consensus/src/: alias.rs  args.rs  bootstrap.rs  codec.rs  config.rs  consensus_utils.rs  context.rs  error.rs  height.rs  lib.rs  metrics.rs  network_identity.rs  proto.rs  provider.rs  subblocks.rs  utils.rs  validators.rs
crates/contracts/: CHANGELOG.md  Cargo.toml
crates/contracts/abi/: ERC2470SingletonDeployer.json  IthacaAccount.json  Multicall.json  NanoUniversalDeployer.json  SafeDeployer.json
crates/contracts/src/: lib.rs  precompiles.rs  schedule.rs  zones.rs
crates/dkg-onchain-artifacts/: Cargo.toml
crates/dkg-onchain-artifacts/src/: lib.rs
crates/e2e/: CHANGELOG.md  Cargo.toml  README.md  metrics_dump
crates/e2e/src/: consensus_snapshot.rs  execution_runtime.rs  lib.rs  metrics.rs  test_network.rs  testing_node.rs
crates/e2e/tests/: payload_builder.rs
crates/evm/: CHANGELOG.md  Cargo.toml
crates/evm/benches/: dex_execution.rs  tip20_execution.rs
crates/evm/fuzz/: Cargo.toml
crates/evm/src/: action_replay.rs  assemble.rs  block.rs  blockstm.rs  build.rs  common.rs  context.rs  engine.rs  error.rs  evm.rs  executor.rs  handler.rs  instructions.rs  jit.rs  lib.rs  pool.rs  proof_trie.rs  test_utils.rs  transaction.rs
crates/evm/tests/: reexports.rs
crates/execution-tests/: Cargo.toml  README.md
crates/execution-tests/src/: abi_encode.rs  database.rs  executor.rs  fingerprint.rs  genesis.rs  lib.rs  main.rs  state_capture.rs  vector.rs
crates/ext/: Cargo.toml  README.md
crates/ext/src/: installer.rs  launcher.rs  lib.rs  registry.rs  state.rs
crates/ext/tests/: lifecycle.rs
crates/faucet/: CHANGELOG.md  Cargo.toml
crates/faucet/src/: args.rs  faucet.rs  lib.rs
crates/fuzz-harness/: Cargo.toml  README.md  build.rs
crates/fuzz-harness/src/: lib.rs
crates/hardfork/: CHANGELOG.md  Cargo.toml
crates/hardfork/src/: constants.rs  gas_params.rs  lib.rs
crates/invariants/: Cargo.toml  README.md
crates/invariants/examples/: demo.rs
crates/invariants/src/: lib.rs
crates/invariants/tests/: block.rs  reserve.rs  tip20.rs
crates/lthash/: Cargo.toml
crates/lthash/src/: accumulator.rs  error.rs  lib.rs  overlay.rs  persistence.rs  store.rs  strategy.rs  tables.rs  (+1 more)
crates/monitor/: Cargo.toml  README.md
crates/native-bridge/: AGENTS.md  Cargo.toml  DEVNET_STEPS.md  ISSUE.md  bridge-sidecar.example.toml
crates/nitro-attestation/: Cargo.toml
crates/node/: CHANGELOG.md  Cargo.toml  build.rs
crates/page-state/: Cargo.toml
xtask/: CHANGELOG.md  Cargo.toml  README.md
xtask/src/: bootstrap_shadowfork.rs  check_abi.rs  check_v1_migration.rs  commonware.rs  consensus_config.rs  dealer_log.rs  decode_cert.rs  devnet.rs  dump_polynomial.rs  enode_from_secret.rs  generate_consensus_config.rs  generate_devnet.rs  generate_docs.rs  generate_genesis.rs  generate_localnet.rs  generate_neobank_reward_claims.rs  generate_shadowfork.rs  generate_state_bloat.rs  genesis.rs  genesis_args.rs  get_dkg_outcome.rs  identity_transitions.rs  inspect_block.rs  main.rs  migrate_validator.rs  replay_dkg.rs  shadowfork.rs  state_bloat.rs
(+57728 files in other folders)
