[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = ""
publish = false

[workspace]
members = [
  "bin/tempo",
  "bin/tempo-bench",
  "bin/tempo-sidecar",
  "crates/chainspec",
  "crates/commonware-node",
  "crates/commonware-node-config",
  "crates/commonware-node-cryptography",
  "crates/consensus",
  "crates/eyre",
  "crates/evm",
  "crates/faucet",
  "crates/node",
  "crates/payload/builder",
  "crates/payload/types",
  "crates/precompiles",
  "crates/primitives",
  "crates/contracts",
  "crates/telemetry-util",
  "crates/transaction-pool",
  "crates/revm",
  "xtask",
]

# Resolver 3 is available with edition 2024
resolver = "3"

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
default-constructed-unit-structs = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Include debug info in benchmarks too.
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
tempo-node = { path = "crates/node" }
sequential-futures-queue = { path = "crates/sequential-futures-queue" }

tempo-chainspec = { path = "crates/chainspec" }
tempo-commonware-node = { path = "crates/commonware-node" }
tempo-commonware-node-config = { path = "crates/commonware-node-config" }
tempo-commonware-node-cryptography = { path = "crates/commonware-node-cryptography" }
tempo-consensus = { path = "crates/consensus" }
tempo-faucet = { path = "crates/faucet" }
tempo-evm = { path = "crates/evm" }
tempo-eyre = { path = "crates/eyre" }
tempo-revm = { path = "crates/revm" }
tempo-payload-builder = { path = "crates/payload/builder" }
tempo-payload-types = { path = "crates/payload/types" }
tempo-precompiles = { path = "crates/precompiles" }
tempo-primitives = { path = "crates/primitives" }
tempo-contracts = { path = "crates/contracts" }
tempo-telemetry-util = { path = "crates/telemetry-util" }
tempo-transaction-pool = { path = "crates/transaction-pool" }

reth = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "1619408" }

alloy-network = { version = "1.0.38" }
alloy-rpc-types-eth = { version = "1.0.38" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "1619408", features = [
  "std",
  "optional-checks",
] }
revm = "29"

alloy = { version = "1.0.38", default-features = false }
alloy-evm = "0.21.2"
alloy-consensus = "1.0.38"
alloy-eips = "1.0.38"
alloy-genesis = "1.0.38"
alloy-primitives = "1.3.1"
alloy-sol-types = "1.0.38"
alloy-rlp = "0.3.12"
alloy-rpc-types-engine = "1.0.38"
alloy-serde = "1.0.38"
alloy-signer = "1.0.38"
alloy-signer-local = "1.0.38"
alloy-trie = "0.9.1"
arbitrary = { version = "1.3", features = ["derive"] }

commonware-broadcast = "0.0.62"
commonware-codec = "0.0.62"
commonware-consensus = "0.0.62"
commonware-cryptography = "0.0.62"
commonware-p2p = "0.0.62"
commonware-resolver = "0.0.62"
commonware-runtime = "0.0.62"
commonware-utils = "0.0.62"

anyhow = "1.0.98"
async-trait = "0.1"
axum = "0.8.4"
base64 = "0.22"
bincode = "1.3"
bytes = "1.8"
camino = "1.1.12"
clap = { version = "4.5.45", features = ["derive"] }
const-hex = { version = "1.15.0" }
derive_more = { version = "2.0.0" }
test-fuzz = "7"
eyre = "0.6.12"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-util = "0.3.31"
hex = "0.4"
governor = "0.6.3"
humantime-serde = "1.1.1"
indexmap = { version = "2.11.0" }
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
metrics = "0.24.0"
multiaddr = "0.18"
pin-project-lite = "0.2.16"
proptest = "1.7"
proptest-arbitrary-interop = "0.1.0"
prost = "0.13"
prost-build = "0.13"
protox = "0.7"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha3 = "0.10"
tempfile = "3.20.0"
thiserror = "2.0.14"
# TODO: restrict this to only the required features
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.16"
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
criterion = "0.7.0"
test-case = "3"

# build deps
vergen = "9"
vergen-git2 = "1"

[patch.crates-io]
commonware-broadcast = { git = "https://github.com/commonwarexyz/monorepo", rev = "0320f5c8985ae767d7da75b61025ad47732354ab" }
commonware-codec = { git = "https://github.com/commonwarexyz/monorepo", rev = "0320f5c8985ae767d7da75b61025ad47732354ab" }
commonware-consensus = { git = "https://github.com/commonwarexyz/monorepo", rev = "0320f5c8985ae767d7da75b61025ad47732354ab" }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo", rev = "0320f5c8985ae767d7da75b61025ad47732354ab" }
commonware-p2p = { git = "https://github.com/commonwarexyz/monorepo", rev = "0320f5c8985ae767d7da75b61025ad47732354ab" }
commonware-resolver = { git = "https://github.com/commonwarexyz/monorepo", rev = "0320f5c8985ae767d7da75b61025ad47732354ab" }
commonware-runtime = { git = "https://github.com/commonwarexyz/monorepo", rev = "0320f5c8985ae767d7da75b61025ad47732354ab" }
commonware-utils = { git = "https://github.com/commonwarexyz/monorepo", rev = "0320f5c8985ae767d7da75b61025ad47732354ab" }
