[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
license = ""
publish = false

[workspace]
members = [
  "bin/tempo",
  "bin/tempo-bench",
  "bin/tempo-sidecar",
  "crates/alloy",
  "crates/chainspec",
  "crates/commonware-node",
  "crates/commonware-node-config",
  "crates/consensus",
  "crates/eyre",
  "crates/evm",
  "crates/e2e",
  "crates/faucet",
  "crates/node",
  "crates/payload/builder",
  "crates/payload/types",
  "crates/precompiles",
  "crates/precompiles-macros",
  "crates/primitives",
  "crates/contracts",
  "crates/telemetry-util",
  "crates/transaction-pool",
  "crates/revm",
  "xtask",
]

# Resolver 3 is available with edition 2024
resolver = "3"

[workspace.lints]
[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
default-constructed-unit-structs = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Meant for testing - all optimizations, but with debug assertions and overflow checks.
[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Include debug info in benchmarks too.
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
tempo-alloy = { path = "crates/alloy" }

tempo-node = { path = "crates/node" }

tempo-chainspec = { path = "crates/chainspec", default-features = false }
tempo-commonware-node = { path = "crates/commonware-node", default-features = false }
tempo-commonware-node-config = { path = "crates/commonware-node-config", default-features = false }
tempo-consensus = { path = "crates/consensus", default-features = false }
tempo-e2e = { path = "crates/e2e" }
tempo-faucet = { path = "crates/faucet", default-features = false }
tempo-evm = { path = "crates/evm", default-features = false }
tempo-eyre = { path = "crates/eyre", default-features = false }
tempo-revm = { path = "crates/revm", default-features = false }
tempo-payload-builder = { path = "crates/payload/builder", default-features = false }
tempo-payload-types = { path = "crates/payload/types", default-features = false }
tempo-precompiles = { path = "crates/precompiles", default-features = false }
tempo-precompiles-macros = { path = "crates/precompiles-macros" }
tempo-primitives = { path = "crates/primitives", default-features = false }
tempo-contracts = { path = "crates/contracts", default-features = false }
tempo-telemetry-util = { path = "crates/telemetry-util", default-features = false }
tempo-transaction-pool = { path = "crates/transaction-pool", default-features = false }

reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-codecs-derive = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712" }

alloy-network = { version = "1.0.41" }
alloy-rpc-types-eth = { version = "1.0.41" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "4d9d712", features = [
  "std",
  "optional-checks",
] }
revm = "31.0.2"

alloy = { version = "1.0.41", default-features = false }
alloy-evm = "0.23.2"
alloy-consensus = "1.0.41"
alloy-eips = "1.0.41"
alloy-genesis = "1.0.41"
alloy-hardforks = "0.4.4"
alloy-primitives = "1.4.1"
alloy-provider = { version = "1.0.41", default-features = false }
alloy-sol-types = "1.4.1"
alloy-rlp = "0.3.12"
alloy-rpc-types-engine = "1.0.41"
alloy-serde = "1.0.41"
alloy-signer = "1.0.41"
alloy-signer-local = "1.0.41"
arbitrary = { version = "1.3", features = ["derive"] }

commonware-broadcast = "0.0.63"
commonware-codec = "0.0.63"
commonware-consensus = "0.0.63"
commonware-cryptography = "0.0.63"
commonware-macros = "0.0.63"
commonware-p2p = "0.0.63"
commonware-resolver = "0.0.63"
commonware-runtime = "0.0.63"
commonware-storage = "0.0.63"
commonware-utils = "0.0.63"

auto_impl = "1"
anyhow = "1.0.98"
async-trait = "0.1"
axum = "0.8.4"
base64 = "0.22"
bytes = "1.8"
camino = "1.1.12"
clap = { version = "4.5.45", features = ["derive"] }
const-hex = { version = "1.15.0" }
derive_more = { version = "2.0.0" }
test-fuzz = "7"
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4"
governor = "0.6.3"
humantime-serde = "1.1.1"
indexmap = { version = "2.11.0" }
jsonrpsee = { version = "0.26.0", features = ["server", "client", "macros"] }
metrics = "0.24.0"
p256 = "0.13"
parking_lot = "0.12.4"
pin-project-lite = "0.2.16"
prometheus-client = "0.22.3"
proptest = "1.7"
proptest-arbitrary-interop = "0.1.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10"
tempfile = "3.20.0"
thiserror = "2.0.14"
# TODO: restrict this to only the required features
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.16"
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
criterion = "0.7.0"
test-case = "3"

# build deps
vergen = "9"
vergen-git2 = "1"

[patch.crates-io]
# main branch, right after https://github.com/commonwarexyz/monorepo/pull/2140 was merged
commonware-broadcast = { git = "https://github.com/commonwarexyz/monorepo", rev = "c26f028619bffe5ca5902848e46b26da26aa8bb1" }
commonware-codec = { git = "https://github.com/commonwarexyz/monorepo", rev = "c26f028619bffe5ca5902848e46b26da26aa8bb1" }
commonware-consensus = { git = "https://github.com/commonwarexyz/monorepo", rev = "c26f028619bffe5ca5902848e46b26da26aa8bb1" }
commonware-cryptography = { git = "https://github.com/commonwarexyz/monorepo", rev = "c26f028619bffe5ca5902848e46b26da26aa8bb1" }
commonware-macros = { git = "https://github.com/commonwarexyz/monorepo", rev = "c26f028619bffe5ca5902848e46b26da26aa8bb1" }
commonware-p2p = { git = "https://github.com/commonwarexyz/monorepo", rev = "c26f028619bffe5ca5902848e46b26da26aa8bb1" }
commonware-resolver = { git = "https://github.com/commonwarexyz/monorepo", rev = "c26f028619bffe5ca5902848e46b26da26aa8bb1" }
commonware-runtime = { git = "https://github.com/commonwarexyz/monorepo", rev = "c26f028619bffe5ca5902848e46b26da26aa8bb1" }
commonware-storage = { git = "https://github.com/commonwarexyz/monorepo", rev = "c26f028619bffe5ca5902848e46b26da26aa8bb1" }
commonware-utils = { git = "https://github.com/commonwarexyz/monorepo", rev = "c26f028619bffe5ca5902848e46b26da26aa8bb1" }
