[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio.workspace= true
serde_json.workspace = true
anyhow.workspace = true
eyre.workspace = true

# Local dependencies
library = { path = "../library" }

# Reth dependencies
reth-chainspec.workspace = true
reth-tasks.workspace = true
reth-ethereum-primitives.workspace = true
reth-ethereum.workspace = true
reth-node-core.workspace = true
reth-node-builder.workspace = true
reth-node-ethereum.workspace = true

# Alloy dependencies
alloy.workspace = true

# Malachite dependencies

