[package]
name = "tempo-xtask"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-chainspec.workspace = true
tempo-contracts.workspace = true
tempo-commonware-node-config.workspace = true
tempo-evm.workspace = true
tempo-precompiles.workspace = true

alloy = { workspace = true, features = [
  "genesis",
  "signers",
  "signer-local",
  "signer-mnemonic",
  "sol-types",
] }
alloy-primitives.workspace = true
clap = { version = "4.5.45", features = ["derive"] }
commonware-codec.workspace = true
commonware-cryptography.workspace = true
commonware-utils.workspace = true
const-hex.workspace = true
eyre.workspace = true
indexmap.workspace = true
indicatif = { workspace = true, features = ["rayon"] }
itertools.workspace = true
rand.workspace = true
rayon = "1.10"
reth-evm.workspace = true
reth-network-peers.workspace = true
secp256k1 = "0.30.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
