[package]
name = "tempo-xtask"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-chainspec = { workspace = true, features = ["default"] }
tempo-contracts.workspace = true
tempo-primitives = { workspace = true, features = ["reth-codec"] }
tempo-consensus-config.workspace = true
tempo-validator-config.workspace = true
tempo-dkg-onchain-artifacts.workspace = true
tempo-evm.workspace = true
tempo-precompiles.workspace = true
tempo-revm.workspace = true

alloy = { workspace = true, features = [
  "genesis",
  "providers",
  "provider-ws",
  "reqwest",
  "reqwest-rustls-tls",
  "signers",
  "signer-local",
  "signer-mnemonic",
  "rand",
  "sol-types",
  "getrandom",
] }
alloy-consensus.workspace = true
alloy-json-abi.workspace = true
alloy-primitives = { workspace = true, features = ["asm-keccak"] }
bytes.workspace = true
coins-bip32.workspace = true
clap = { workspace = true, features = ["derive"] }
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-math.workspace = true
commonware-runtime = { workspace = true, features = ["external"] }
commonware-storage.workspace = true
commonware-utils.workspace = true
const-hex.workspace = true
eyre.workspace = true
indicatif = { workspace = true, features = ["rayon"] }
itertools.workspace = true
rand_08.workspace = true
rayon.workspace = true
reth-evm.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
reth-provider.workspace = true
reth-primitives-traits.workspace = true
reth-network-peers = { workspace = true, features = ["secp256k1"] }
revm.workspace = true
secp256k1 = { workspace = true, features = ["rand"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
