[package]
name = "tempo-alloy"
description = "Tempo extensions of Alloy"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
tempo-contracts = { workspace = true, features = ["rpc"] }
tempo-primitives = { workspace = true, features = ["serde", "rpc"] }
tempo-chainspec.workspace = true
tempo-evm.workspace = true
tempo-revm.workspace = true

alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
alloy-signer-local.workspace = true
alloy-transport.workspace = true

reth-evm.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-convert.workspace = true
reth-rpc-eth-types.workspace = true

dashmap.workspace = true
derive_more.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["providers", "rpc-types-eth", "sol-types"] }
alloy-signer.workspace = true
eyre.workspace = true
test-case.workspace = true
tokio.workspace = true

[features]
default = []
asm-keccak = [
    "alloy-primitives/asm-keccak",
    "alloy/asm-keccak",
]
